syntax = "proto3";

package todo;

option java_package = "com.proto.report";
option java_multiple_files = true;

message AddMoveLeadLogRequest {
  int64 userId = 1;
  int64 leadId = 2;
  int64 prevStatusId = 3;
  int64 nextStatusId = 4;
}

message AddMoveLeadLogResponse {
}

message AddNewLeadLogRequest {
  int64 userId = 1;
  int64 leadId = 2;
}

message AddNewLeadLogResponse {
}

service ReportService {
  rpc AddMoveLeadLog(AddMoveLeadLogRequest) returns (AddMoveLeadLogResponse);

  rpc AddNewLeadLog(AddNewLeadLogRequest) returns (AddNewLeadLogResponse);
}